package factory;

import model.*;

public interface BebidaFactory {
    Cafe criarCafe();
    Cha criarCha();
}