package model;

public interface Cafe {
    String servir();
}