package model;

public class CafeGelado implements Cafe {
    public String servir() {
        return "Cafe gelado";
    }
}