package model;

public class CafeQuente implements Cafe {
    public String servir() {
        return "Cafe quente";
    }
}