package model;

public interface Cha {
    String servir();
}