package model;

public class ChaGelado implements Cha {
    public String servir() {
        return "Cha gelado";
    }
}