package model;

public class ChaQuente implements Cha {
    public String servir() {
        return "Cha quente";
    }
}